maze.lessons.maze.island.IslandMaze.scala.error
Escaper:22: error: not found: value set
    	set.Direction(Direction.NORTH)
        ^