maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    if(estFaceMur){
      droite()
      if(estFaceMur){
        droite()
        avance()
        gauche()
        if(estFaceMur){
          gauche()
          avance()
        }else{
          while(!estFaceMur){
            avance()
          }
        }
      }else{
        avance()
      }
    }else{
    	set.Direction(Direction.NORTH)
    	while(!estFaceMur){
      	avance()
      }
    }
  }
  prendBiscuit()
}